--- a/style.css
+++ b/style.css
@@ -1,97 +1,109 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --very-dark-gray: hsl(0, 0%, 17%);
+  --dark-gray: hsl(0, 0%, 59%);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Rubik, sans-serif;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-size: 18px;
+  height: 100vh;
+}
+
+#map-container {
+  height: 70%;
+}
+
+#map { 
+  height: 100%;
+  width: 100vw;
+  z-index: -1;
+}
+
+header {
+  background-image: linear-gradient(45deg, rgba(129, 166, 201, 0.162), rgba(71, 56, 171, 0.222)), url(./pattern-bg.png);
+  background-size: 300%;
+  height: 280px;
+  text-align: center;
+  position: relative;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 30px;
+  color: white;
+  font-size: 1.6rem;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+form {
+  position: relative;
+  height: 50px;
+  width: 90%;
+  max-width: 550px;
+  margin: 0 auto;
+}
+
+input {
+  height: 100%;
+  width: 100%;
+  border: 0;
+  outline: 0;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 20%);
+}
+
+input:focus {
+  outline: 0;
+}
+
+#btn-search {
+  position: absolute;
+  height: 100%;
+  right: 0px;
+  border: 0;
+  border-radius: 0 15px 15px 0;
+  background-color: black;
+  width: 50px;
+  transition: 100ms;
+}
+
+#btn-search:hover {
+  background-color: rgb(53, 53, 53);
+}
+
+#btn-search:active {
+  background-color: white;
+}
+
+#result-container {
+  margin: 20px;
+  background-color: white;
+  /* padding: 10px; */
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.section-header {
+  font-size: 0.5rem;
+  font-weight: 700;
+  color: var(--dark-gray);
+  letter-spacing: 2px;
+}
+
+.section-result {
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-top: 5px;
+  color: var(--very-dark-gray);
+}
+
+.result-section {
+  padding: 10px;
 }
