--- a/style.css
+++ b/style.css
@@ -17,14 +17,15 @@ body {
   height: 100vh;
 }
 
-#map-container {
-  height: 70%;
+html, body {
+  height: 100%;
+  width: 100vw;
 }
 
 #map { 
-  height: 100%;
+  height: 60%;
   width: 100vw;
-  z-index: -1;
+  z-index: 0;
 }
 
 header {
@@ -33,6 +34,7 @@ header {
   height: 280px;
   text-align: center;
   position: relative;
+  z-index: 1;
 }
 
 h1 {
@@ -61,6 +63,13 @@ input {
 
 input:focus {
   outline: 0;
+}
+
+input[type=text] {
+  padding-left: 20px;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: var(--very-dark-gray);
 }
 
 #btn-search {
