--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ input:focus {
   outline: 0;
 }
 
+input::placeholder {
+  font-size: 1rem;
+}
+
 input[type=text] {
   padding-left: 20px;
   font-size: 1.2rem;
