--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html, body {
 }
 
 header {
-  background-image: linear-gradient(45deg, rgba(129, 166, 201, 0.162), rgba(71, 56, 171, 0.222)), url(./pattern-bg.png);
+  background-image: linear-gradient(45deg, rgba(129, 166, 201, 0.162), rgba(71, 56, 171, 0.222)), url(./public/pattern-bg.png);
   background-size: 2000px;
   height: 280px;
   text-align: center;
